Make sure scrollbar is not being displayed unnecessarily

--- a/addon/styles/addon.scss
+++ b/addon/styles/addon.scss
@@ -34,7 +34,6 @@
     position : absolute;
     right : 2px;
     width : 7px;
-    min-height : 10px;
     -webkit-transition : opacity 0.2s linear;
        -moz-transition : opacity 0.2s linear;
         -ms-transition : opacity 0.2s linear;
@@ -89,7 +88,7 @@
       top : 2px;
       right : auto;
       width : auto;
-      min-width : 10px;
+      min-width : 0;
       height : 7px;
       min-height : 0;
     }
